--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Halo semuanya! Saya Ade Ayu Kholifah Putri. Mahasiswi Program Studi Sistem Informasi angkatan 2023 di Institut Teknologi Kalimantan. Saya memiliki hobi membaca novel dan mendengarkan musik. Saya juga menulis beberapa cerita fiksi di sebuah aplikasi membaca online. Saya tidak pandai dalam pemrograman, tapi jika tentang surat menyurat atau kesekretariatan saya ahlinya!</p>
             <div class="social-icons">
-                <a href="https://github.com/Adeayuuu" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://github.com/Adeyuu" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://instagram.com/adeyuu12_" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="mailto:10231004@student.itk.ac.id"><i class="fa-solid fa-envelope"></i></a>
                 <a href="https://wa.me/6285346378390" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
